--- a/portfolio.html
+++ b/portfolio.html
@@ -285,7 +285,7 @@
                                             allow="autoplay"></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
-                                            <span class="title-frame">Juoner</span>
+                                            <span class="title-frame">Footages Video Editing</span>
                                         </div>
                                     </div>
                                     <div class="iframe">
@@ -294,7 +294,7 @@
                                             allow="autoplay"></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
-                                            <span class="title-frame">Juoner</span>
+                                            <span class="title-frame">Brand Editing</span>
                                         </div>
                                     </div>
                                     <div class="iframe">
@@ -303,7 +303,7 @@
                                             allow="autoplay"></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
-                                            <span class="title-frame">Juoner</span>
+                                            <span class="title-frame">Influencer Editing</span>
                                         </div>
                                     </div>
                                     <div class="iframe">
@@ -312,7 +312,7 @@
                                             allow="autoplay"></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
-                                            <span class="title-frame">Juoner</span>
+                                            <span class="title-frame">Reels Editing</span>
                                         </div>
                                     </div>
                                     <div class="iframe">
@@ -321,7 +321,7 @@
                                             allow="autoplay"></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
-                                            <span class="title-frame">Juoner</span>
+                                            <span class="title-frame">Reels Editing</span>
                                         </div>
                                     </div>
                                     <div class="iframe">
@@ -330,7 +330,7 @@
                                             allow="autoplay"></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
-                                            <span class="title-frame">Juoner</span>
+                                            <span class="title-frame">Shorts Editing</span>
                                         </div>
                                     </div>
                                     <div class="iframe">
@@ -339,7 +339,7 @@
                                             allow="autoplay"></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
-                                            <span class="title-frame">Juoner</span>
+                                            <span class="title-frame">Corporate Reels</span>
                                         </div>
                                     </div>
                                     <div class="iframe">
@@ -348,7 +348,7 @@
                                             allow="autoplay"></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
-                                            <span class="title-frame">Juoner</span>
+                                            <span class="title-frame">Personal Branding</span>
                                         </div>
                                     </div>
                                     <div class="iframe">
@@ -357,7 +357,7 @@
                                             allow="autoplay"></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
-                                            <span class="title-frame">Juoner</span>
+                                            <span class="title-frame">Shorts Editing</span>
                                         </div>
                                     </div>
                                     <div class="iframe">
@@ -366,7 +366,7 @@
                                             allow="autoplay"></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
-                                            <span class="title-frame">Juoner</span>
+                                            <span class="title-frame">Logo Animations</span>
                                         </div>
                                     </div>
                                     <div class="iframe">
@@ -375,14 +375,14 @@
                                             allow="autoplay"></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
-                                            <span class="title-frame">Juoner</span>
+                                            <span class="title-frame">Logo Animations</span>
                                         </div>
                                     </div>
                                     <div class="iframe">
                                         <iframe src="https://drive.google.com/file/d/1s1S5finzhkKXW4OwAhophUJPFLsYxKP7/preview"  allow="autoplay"></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
-                                            <span class="title-frame">Juoner</span>
+                                            <span class="title-frame">Product Ads Editing</span>
                                         </div>
                                     </div>
                                 </div>
