--- a/contact.html
+++ b/contact.html
@@ -197,7 +197,7 @@
                         <h3>Working Hour</h3>
                         <p>Monday - Sunday :24/7</p>
                         <!-- <p> <span class="sunday">Sunday Close</span></p> -->
-                        <h3>Ready To Work Us ?</h3>
+                        <h3>Ready To Work With Us ?</h3>
                         <p class="work-us-para">At Befhue, we’re passionate about turning your ideas into extraordinary
                             designs that captivate and inspire. Whether it’s branding, print, digital, or video, we’re
                             here to create solutions tailored to your unique vision.
