--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
 
                 <div class="top-icon gap-1 d-flex ">
                     <div class="social">
-                        <a href="info@befhue.com">
+                        <a href="mailto:info@befhue.com">
                             <h3>Mail us: info@befhue.com</h3>
                         </a>
                     </div>
