--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
 
                 <div class="top-icon gap-1 d-flex ">
                     <div class="social">
-                        <a href="info@befhue.com">
+                        <a href="mailto:info@befhue.com">
                             <h3>Mail us: info@befhue.com</h3>
                         </a>
                     </div>
