--- a/about.html
+++ b/about.html
@@ -43,6 +43,10 @@
 </head>
 
 <body>
+
+    <div class="cursor-1 d-none d-lg-flex"></div>
+    <div class="cursor-2 d-none d-lg-flex"></div>
+
     <!--///////////////////// Popup the Form start /////////////////////////-->
 
     <section class="popup-form">
