--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,8 @@
 </head>
 
 <body>
+    <div class="cursor-1 d-none d-lg-flex"></div>
+    <div class="cursor-2 d-none d-lg-flex"></div>
 
     <!-- Top of nav start -->
 
