--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
     <!-- banner section start --------------->
     <div class="video-container">
         <video src="assets/images/home/homebanner.mp4" autoplay loop muted class="video-element"></video>
+        <!-- <video src="assets/images/home/homebanner.mp4" autoplay loop muted class="video-element1"></video> -->
         <!-- <div className="video-info">
             <div class="vl-banner-video"></div>
 
@@ -181,6 +182,8 @@
             </div>
         </div> -->
     </div>
+
+
     <!------------------- about section start ------------------>
     <div class="aboutus-page reveal">
         <div class="aboutus-container container">
