--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
     <!-- fontawesome elements -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/lib  s/font-awesome/6.7.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
