--- a/portfolio.html
+++ b/portfolio.html
@@ -238,7 +238,7 @@
                                     <div class="iframe">
                                         <iframe
                                             src="https://drive.google.com/file/d/1X4Ggm4T14ddc5Reo2ZjM40EckoGDtcW6/preview"
-                                            allow="autoplay"></iframe>
+                                            allow="autoplay: encrypted-media" allowfullscreen></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
                                             <span class="title-frame">Wedding Video Editing</span>
