--- a/portfolio.html
+++ b/portfolio.html
@@ -35,8 +35,8 @@
 </head>
 
 <body>
-    <div class="cursor-1 d-none d-lg-flex"></div>
-    <div class="cursor-2 d-none d-lg-flex"></div>
+    <!-- <div class="cursor-1 d-none d-lg-flex"></div>
+    <div class="cursor-2 d-none d-lg-flex"></div> -->
 
     <!--///////////////////// Popup the Form start /////////////////////////-->
 
@@ -239,6 +239,7 @@
                                         <iframe
                                             src="https://drive.google.com/file/d/1X4Ggm4T14ddc5Reo2ZjM40EckoGDtcW6/preview"
                                             allow="autoplay: encrypted-media" allowfullscreen></iframe>
+                                        
                                         <div class="frame-content">
                                             <span class="line"></span>
                                             <span class="title-frame">Wedding Video Editing</span>
@@ -248,6 +249,7 @@
                                         <iframe
                                             src="https://drive.google.com/file/d/1MLVs6CHDDGEMLSBfmKekLxBBTtI3q8ku/preview"
                                             allow="autoplay"></iframe>
+                                       
                                         <div class="frame-content">
                                             <span class="line"></span>
                                             <span class="title-frame">Corporate Video Editing</span>
