--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
 
                 </div>
                 <div class="testimonialsection-images">
-                    <img src="assets/images/home/women.png" />
+                    <img width="100%" src="assets/images/home/women.png" />
                     <hr class="hr">
                 </div>
             </div>
@@ -712,14 +712,7 @@
     <footer>
         <div class="footer-communicate reveal">
             <h3 style="color: white;">About befhue</h3>
-            <p>We’re graphic design and video editing agency, turning your
-                brand’s ideas into beautiful visual experiences. We
-                specialise in logo design, brand identity, web design,
-                packaging design and digital marketing. Our team of graphic
-                designers bring artistic talent and strategic thinking to every
-                design so it looks great and works for your business. We’re proud
-                of our quality and client satisfaction, delivering designs that speak
-                to your audience and raise your brand.</p>
+            <p>We’re graphic design and video editing agency, turning your brand’s ideas into beautiful visual experiences.Our team bring artistic talent and strategic thinking to every editing and designs</p>
 
         </div>
         <div class="footer-communicate">
