--- a/portfolio.html
+++ b/portfolio.html
@@ -239,7 +239,7 @@
                                         <iframe
                                             src="https://drive.google.com/file/d/1X4Ggm4T14ddc5Reo2ZjM40EckoGDtcW6/preview"
                                             allow="autoplay: encrypted-media" allowfullscreen></iframe>
-                                        
+
                                         <div class="frame-content">
                                             <span class="line"></span>
                                             <span class="title-frame">Wedding Video Editing</span>
@@ -249,7 +249,7 @@
                                         <iframe
                                             src="https://drive.google.com/file/d/1MLVs6CHDDGEMLSBfmKekLxBBTtI3q8ku/preview"
                                             allow="autoplay"></iframe>
-                                       
+
                                         <div class="frame-content">
                                             <span class="line"></span>
                                             <span class="title-frame">Corporate Video Editing</span>
@@ -419,14 +419,7 @@
     <footer>
         <div class="footer-communicate">
             <h3 style="color: white;">About befhue</h3>
-            <p>We’re graphic design and video editing agency, turning your
-                brand’s ideas into beautiful visual experiences. We
-                specialise in logo design, brand identity, web design,
-                packaging design and digital marketing. Our team of graphic
-                designers bring artistic talent and strategic thinking to every
-                design so it looks great and works for your business. We’re proud
-                of our quality and client satisfaction, delivering designs that speak
-                to your audience and raise your brand.</p>
+            <p>We’re graphic design and video editing agency, turning your brand’s ideas into beautiful visual experiences.Our team bring artistic talent and strategic thinking to every editing and designs</p>
 
 
         </div>
@@ -629,6 +622,30 @@
         //////////////////////// Navbar /////////////////////
 
 
+        // Reveal 
+
+        window.addEventListener('scroll', reveal);
+
+        function reveal() {
+            var reveals = document.querySelectorAll('.reveal');
+
+            for (var i = 0; i < reveals.length; i++) {
+                var windowHeight = window.innerHeight;
+
+                var revealtop = reveals[i].getBoundingClientRect().top;
+
+                var revealPoint = 50;
+
+                if (revealtop < windowHeight - revealPoint) {
+                    reveals[i].classList.add('active');
+                }
+                else {
+                    reveals[i].classList.remove('active');
+                }
+
+
+            }
+        }
     </script>
 
 </body>
